--- a/angular-webappclima/angular.json
+++ b/angular-webappclima/angular.json
@@ -99,9 +99,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/materialize-css/dist/css/materialize.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/materialize-css/dist/js/materialize.min.js"
+            ]
           }
         },
         "lint": {
