--- a/angular-webappclima/docker-compose.yml
+++ b/angular-webappclima/docker-compose.yml
@@ -1,12 +1,8 @@
 version: '3.4'
 
 services:
-  angularwebappclima:
-    image: angularwebappclima
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    environment:
-      NODE_ENV: production
+  angular-wepappclima:
+    image: angular-wepappclima
+    build: .
     ports:
-      - 3000:3000
+      - 8081:80
